--- a/packages.bib
+++ b/packages.bib
@@ -34,8 +34,8 @@
 @Manual{R-DT,
   title = {DT: A Wrapper of the JavaScript Library DataTables},
   author = {Yihui Xie and Joe Cheng and Xianying Tan},
-  year = {2022},
-  note = {R package version 0.26},
+  year = {2023},
+  note = {R package version 0.27},
   url = {https://github.com/rstudio/DT},
 }
 
@@ -58,8 +58,8 @@
 @Manual{R-flextable,
   title = {flextable: Functions for Tabular Reporting},
   author = {David Gohel and Panagiotis Skintzos},
-  year = {2022},
-  note = {R package version 0.8.3},
+  year = {2023},
+  note = {R package version 0.8.4},
   url = {https://CRAN.R-project.org/package=flextable},
 }
 
@@ -156,8 +156,8 @@ Library},
 @Manual{R-lubridate,
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
-  year = {2022},
-  note = {R package version 1.9.0},
+  year = {2023},
+  note = {R package version 1.9.1},
   url = {https://CRAN.R-project.org/package=lubridate},
 }
 
@@ -180,16 +180,16 @@ Library},
 @Manual{R-officedown,
   title = {officedown: Enhanced R Markdown Format for Word and PowerPoint},
   author = {David Gohel and Noam Ross},
-  year = {2022},
-  note = {R package version 0.2.4},
+  year = {2023},
+  note = {R package version 0.3.0},
   url = {https://CRAN.R-project.org/package=officedown},
 }
 
 @Manual{R-officer,
   title = {officer: Manipulation of Microsoft Word and PowerPoint Documents},
   author = {David Gohel},
-  year = {2022},
-  note = {R package version 0.4.4},
+  year = {2023},
+  note = {R package version 0.5.1},
   url = {https://CRAN.R-project.org/package=officer},
 }
 
@@ -204,16 +204,16 @@ Library},
 @Manual{R-raster,
   title = {raster: Geographic Data Analysis and Modeling},
   author = {Robert J. Hijmans},
-  year = {2022},
-  note = {R package version 3.6-11},
+  year = {2023},
+  note = {R package version 3.6-14},
   url = {https://rspatial.org/raster},
 }
 
 @Manual{R-reactable,
   title = {reactable: Interactive Data Tables for R},
   author = {Greg Lin},
-  year = {2022},
-  note = {R package version 0.4.1},
+  year = {2023},
+  note = {R package version 0.4.3},
   url = {https://CRAN.R-project.org/package=reactable},
 }
 
@@ -236,9 +236,18 @@ Library},
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2022},
-  note = {R package version 2.19},
+  year = {2023},
+  note = {R package version 2.20},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-rnaturalearth,
+  title = {rnaturalearth: World Map Data from Natural Earth},
+  author = {Philippe Massicotte and Andy South},
+  year = {2023},
+  note = {R package version 0.3.2},
+  url = {https://docs.ropensci.org/rnaturalearth/
+https://github.com/ropensci/rnaturalearth},
 }
 
 @Manual{R-scales,
@@ -285,8 +294,8 @@ Phase},
 @Manual{R-terra,
   title = {terra: Spatial Data Analysis},
   author = {Robert J. Hijmans},
-  year = {2022},
-  note = {R package version 1.6-47},
+  year = {2023},
+  note = {R package version 1.6-53},
   url = {https://rspatial.org/terra/},
 }
 
