--- a/packages.bib
+++ b/packages.bib
@@ -18,8 +18,8 @@
 @Manual{R-broom,
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
-  year = {2022},
-  note = {R package version 1.0.2},
+  year = {2023},
+  note = {R package version 1.0.3},
   url = {https://CRAN.R-project.org/package=broom},
 }
 
@@ -193,6 +193,15 @@ Library},
   url = {https://CRAN.R-project.org/package=officer},
 }
 
+@Manual{R-osmdata,
+  title = {osmdata: Import OpenStreetMap Data as Simple Features or Spatial
+Objects},
+  author = {Mark Padgham and Bob Rudis and Robin Lovelace and Maëlle Salmon},
+  year = {2022},
+  note = {R package version 0.1.10},
+  url = {https://CRAN.R-project.org/package=osmdata},
+}
+
 @Manual{R-plotly,
   title = {plotly: Create Interactive Web Graphics via plotly.js},
   author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
@@ -299,6 +308,14 @@ Phase},
   url = {https://rspatial.org/terra/},
 }
 
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2022},
+  note = {R package version 3.1.8},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
@@ -366,6 +383,19 @@ Phase},
   pages = {77--102},
   year = {2017},
   url = {https://journal.r-project.org/archive/2017/RJ-2017-024/index.html},
+}
+
+@Article{osmdata2017,
+  title = {osmdata},
+  author = {Mark Padgham and Bob Rudis and Robin Lovelace and Maëlle Salmon},
+  journal = {The Journal of Open Source Software},
+  year = {2017},
+  volume = {2},
+  number = {14},
+  month = {jun},
+  publisher = {The Open Journal},
+  url = {https://doi.org/10.21105/joss.00305},
+  doi = {10.21105/joss.00305},
 }
 
 @Book{plotly2020,
