--- a/statistics.qmd
+++ b/statistics.qmd
@@ -5,6 +5,7 @@ format:
      code-fold: true
      code-summary: "Show the code"
 number-sections: true
+bibliography: "https://api.citedrive.com/bib/04a2efce-6ae6-418a-ab5b-dbef99b46587/references.bib?x=eyJpZCI6ICIwNGEyZWZjZS02YWU2LTQxOGEtYWI1Yi1kYmVmOTliNDY1ODciLCAidXNlciI6ICIyNTAwIiwgInNpZ25hdHVyZSI6ICJjOTUwMzBmZjAwMzI0NjRhM2FjYjI5MjQ3ZWM4YjM2ODdkZGYxNDdiZTdhMjljZTVjMGYxMjM3OTMxYzJiNmZhIn0=/bibliography.bib"
 ---
 
 ```{r}
@@ -22,9 +23,10 @@ library(broom)
 
 Statistical tests are undertaken to improve ecological understanding, separating the single from the noise. It enhances the ecological description when writing reports, making the report more evidenced based and therefore more robust and reproducible by others. When the data is not clear, or there is too much data to see, good statistics brings comprehension. Then there is a tendency to perceive connections or meaningful patterns between unrelated or random things, termed apophenia; here statistical testing can demonstrate it is random or unrelated.
 
+There are many reference books for ecologists on statistics such as the gentile introductions _Statistics for Terrified Biologists_ [@emden_statistics_2008], _Practical Statistics for Field Biology_ [@fowler_practical_1998]  and _Choosing and Using Statistics: A Biologist's Guide_ [@dytham_choosing_2011]. A more comprehensive guide to ecological statistics is available from _Numerical Ecology_ [@legendre_numerical_2012] and _Analysiing Ecological Data_ [@zuur_analysiing_2007]. The _Numerical Ecology with {R}_ [@borcard_numerical_2011] has a focus on ecological statistics using the R environment.
+
 
 ## Summary Statistics
-
 
 The Common Pipistrelle passes have been aggregated for every 30 minutes; @tbl-sum30 shows summary statistics for these bat passes during September and October. The statistics for September and October look similar and this is confirmed by the density plot shown in @fig-density.
 
